crates/hwp-viewer/tests/snapshots/snapshot_test__html_charshape.snap
---
source: crates/hwp-viewer/tests/snapshot_test.rs
expression: html
---
<!DOCTYPE html>
<html>
<head>
<meta charset="UTF-8">
<title>가나다</title>
<style>

body { margin: 0; padding: 20px; background: #eee; font-family: 'Malgun Gothic', '맑은 고딕', sans-serif; }
.hwp-section { background: #fff; margin: 0 auto 20px; box-shadow: 0 0 5px rgba(0,0,0,0.2); box-sizing: border-box; }
p { margin: 0; min-height: 1em; word-wrap: break-word; }
.hwp-table { border-collapse: collapse; }
.hwp-table td { border: 1px solid #000; padding: 2px 5px; vertical-align: top; }
.hwp-image { display: inline-block; }
.hwp-shape { position: relative; }
.hwp-header, .hwp-footer { color: #666; font-size: 0.9em; border-bottom: 1px solid #ccc; padding-bottom: 4px; margin-bottom: 8px; }
.hwp-footer { border-bottom: none; border-top: 1px solid #ccc; padding-top: 4px; margin-top: 8px; }
.hwp-footnote-ref { vertical-align: super; font-size: 0.8em; color: #0066cc; }
.hwp-footnote-body { font-size: 0.9em; border-top: 1px solid #ccc; padding-top: 4px; margin-top: 8px; }
.cs0 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '굴림'; }
.cs1 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '바탕'; }
.cs2 { font-size: 9pt; color: #000000; background-color: #ffffff; font-family: '굴림'; }
.cs3 { font-size: 9pt; color: #000000; background-color: #ffffff; letter-spacing: -0.05em; font-family: '바탕'; }
.cs4 { font-size: 9pt; color: #000000; background-color: #ffffff; letter-spacing: -0.05em; font-family: '굴림'; }
.cs5 { font-size: 10pt; color: #000000; background-color: #ffffff; font-weight: bold; font-family: '바탕'; }
.cs6 { font-size: 10pt; color: #000000; background-color: #ffffff; font-style: italic; font-family: '바탕'; }
.cs7 { font-size: 10pt; color: #000000; background-color: #ffffff; text-decoration: underline; font-family: '바탕'; }
.cs8 { font-size: 10pt; color: #000000; background-color: #ffffff; text-decoration: underline; font-family: '바탕'; }
.cs9 { font-size: 10pt; color: #000000; background-color: #ffffff; text-decoration: line-through; font-family: '바탕'; }
.cs10 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '바탕'; }
.cs11 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '바탕'; }
.cs12 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '바탕'; }
.cs13 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '바탕'; }
.cs14 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '바탕'; }
.cs15 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '돋움'; }
.cs16 { font-size: 10pt; color: #000000; background-color: #ffffff; font-family: '바탕'; }
.cs17 { font-size: 10pt; color: #000000; background-color: #ffffff; text-decoration: underline; font-family: '바탕'; }
.cs18 { font-size: 10pt; color: #000000; background-color: #ffffff; text-decoration: underline; font-family: '바탕'; }
.ps0 { text-align: justify; line-height: 160%; }
.ps1 { text-align: justify; text-indent: -9.24mm; line-height: 130%; }
.ps2 { text-align: justify; line-height: 160%; }
.ps3 { text-align: justify; margin-left: 10.58mm; line-height: 160%; }
.ps4 { text-align: justify; margin-left: 7.06mm; line-height: 160%; }
.ps5 { text-align: justify; margin-left: 14.11mm; line-height: 160%; }
.ps6 { text-align: justify; margin-left: 21.17mm; line-height: 160%; }
.ps7 { text-align: justify; margin-left: 28.22mm; line-height: 160%; }
.ps8 { text-align: justify; margin-left: 35.28mm; line-height: 160%; }
.ps9 { text-align: justify; margin-left: 42.33mm; line-height: 160%; }
.ps10 { text-align: justify; margin-left: 49.39mm; line-height: 160%; }
.ps11 { text-align: justify; line-height: 150%; }
</style>
</head>
<body>
<div class="hwp-section" style="width:210mm;padding:20mm 30mm 15mm 30mm;">
<p class="ps0">
<span class="cs1">가</span></p>
<p class="ps0">
<span class="cs6">기울임</span><span class="cs5">진하게</span></p>
<p class="ps0">
<span class="cs0">밑줄없음</span><span class="cs7">밑줄</span><span class="cs9">가운데줄</span><span class="cs8">윗줄</span></p>
<p class="ps2">
<span class="cs1">글자크기:</span><span class="cs12">기준크기10pt</span><span class="cs11">한글90%</span><span class="cs13">영문80%</span><span class="cs14">기타70%</span></p>
<p class="ps2">
<span class="cs1">폰트:</span><span class="cs15">한글돋움</span><span class="cs10">영문CourierNew</span><span class="cs16">기타قLucidaSansUnicode</span></p>
<p class="ps2">
<span class="cs17">붉은밑줄</span></p>
<p class="ps2">
<span class="cs18">점선밑줄</span></p>
</div>
</body>
</html>
